[Stage-3] Style and security
